--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"type": "composer-installer",
 	"description": "_php - Installer",
 	"homepage": "http://underscorephp.com",
-	"license": "<http://www.gnu.org/licenses/gpl.html> GNU General Public License Version 3",
+	"license": "GNU General Public License Version 3",
 	"authors": [
 	{
 		"name": "Ken Goldfarb",
